<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.florent37.arclayout.ArcLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:arc_cropDirection="cropOutside"
            app:arc_height="60dp"
            app:arc_padding="60dp">

            <ImageView
                android:id="@+id/tv_detail_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:src="@drawable/movie1" />

        </com.github.florent37.arclayout.ArcLayout>

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            tools:text="@string/title" />

        <TextView
            android:id="@+id/tv_detail_dateRelease"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:text="@string/dateRelease" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="16sp"
            android:paddingEnd="16sp">

            <TextView
                android:id="@+id/tv_detail_rating"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16sp"
                android:layout_marginBottom="2dp"
                android:background="@drawable/bg_rating"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                tools:text="@string/rating" />

            <TextView
                android:id="@+id/tv_detail_userScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="16dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                tools:text="@string/userScore" />

            <TextView
                android:id="@+id/tv_detail_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                tools:text="@string/duration" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_detail_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="14sp"
            tools:text="@string/genre" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_detail_overview"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16sp"
                android:padding="8dp"
                android:text="@string/overview"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_detail_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_gravity="center_vertical|end"
                android:layout_marginTop="4dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                tools:text="@string/overview" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>